--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(LINK_LIBRARY "event.a")
 set(LINK_LIBRARY ${LINK_LIBRARY} "z.a")
 set(LINK_LIBRARY ${LINK_LIBRARY} "curl.a")
 set(LINK_LIBRARY ${LINK_LIBRARY} "crypto.a")
+set(LINK_LIBRARY ${LINK_LIBRARY} "hiredis.a")
 set(LINK_LIBRARY ${LINK_LIBRARY} "pthread")
 set(LINK_LIBRARY ${LINK_LIBRARY} "dl")
 target_link_libraries(main ${LINK_LIBRARY})
