--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "(gdb) Launch", //这个应该是F1中出现的名字
             "preLaunchTask": "cmake_build",  //在launch之前运行的任务名，这个名字一定要跟tasks.json中的任务名字大小写一致
-            "type": "cppdbg",
+            //"type": "cppdbg", //gdb
+            "type": "lldb",  //lldb
             "request": "launch",
             "program": "${workspaceFolder}/build/main", //需要运行的是当前打开文件的目录中，名字和当前文件相同，但扩展名为exe的程序
             "args": [],
