--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch", //这个应该是F1中出现的名字
+            "name": "(lldb) Launch", //这个应该是F1中出现的名字
             "preLaunchTask": "cmake_build",  //在launch之前运行的任务名，这个名字一定要跟tasks.json中的任务名字大小写一致
             //"type": "cppdbg", //gdb
             "type": "lldb",  //lldb
